<resources>
    <string name="app_name" translatable="false">Scan&amp;Go</string>


    <string name="let_s_start">LET\'S START!</string>
    <string name="hello_blank_fragment">blank</string>
    <string name="welcome_to">Welcome To</string>
    <string name="scan_amp_go"><![CDATA[Scan&Go]]></string>
    <string name="scan_amp_go1"><![CDATA[Scan&Go]]></string>
    <string name="map">Map</string>
    <string name="to_choose_a_store">To choose a store use the map:</string>
    <string name="or">or</string>
    <string name="select">SELECT</string>
    <string name="my_shop">My shop</string>
    <string name="nearest_shop">Nearest shop</string>
    <string name="shop_selection">Shop selection</string>
    <string name="click_to_enable_location">Click to enable location, we will help you find the nearest store</string>
    <string name="processing">Processing...</string>
    <string name="to_choose_a_store_use">To choose a store use the map:</string>
    <string name="next">Next</string>
    <string name="click_to_enable_location_we_will_help_you_find_the_nearest_store">Click to enable location, we will help you find the nearest store</string>
    <string name="back">Back</string>
    <string name="skip">Skip</string>
    <string name="please_log_in">Please log in to use all the functionalities of the application!</string>
    <string name="welcome_in_scan_amp_go"><![CDATA[Welcome in Scan&Go service!]]></string>
    <string name="apply">Apply</string>
    <string name="barcode_ean_13" translatable="false">Barcode ( EAN-13 )</string>
    <string name="cancel">Cancel</string>
    <string name="insert_product_code">Insert product code</string>
    <string name="scan_product_code">Scan product code</string>
    <string name="categories">Categories</string>
    <string name="there_is_no_such_product_in_the_store">There is no such product in the store\'s offer</string>
    <string name="monthly_expenses">Monthly expenses</string>
    <string name="you_dont_have_any_transaction">You don\'t have any transaction yet.</string>
    <string name="quick_and_convenient_shopping">Quick and convenient shopping</string>
    <string name="price_reader">Price reader</string>
    <string name="check_product_price">Check product price</string>
    <string name="shopping_list">Shopping list</string>
    <string name="plan_your_purchases_and_expenses">Plan your purchases</string>
    <string name="menu" translatable="false">Menu</string>
    <string name="hello">Hello</string>
    <string name="your_profile">YOUR PROFILE</string>
    <string name="shopping">SHOPPING</string>
    <string name="product_categories">Product categories</string>
    <string name="product_promotion">Product promotion</string>
    <string name="logout">Logout</string>
    <string name="order_details">ORDER DETAILS</string>
    <string name="order_date">Order Date</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="status" translatable="false">Status</string>
    <string name="payment_id">Payment ID</string>
    <string name="payment_complete">Payment Complete</string>
    <string name="thank_you_your_payment_has_been_successfully">Thank you, your payment has been successfully processed</string>
    <string name="continue_">Continue</string>
    <string name="my_profile">My profile</string>
    <string name="please_login_to_start_using_scan_amp_go_service"><![CDATA[Please login to start using Scan&Go service!]]></string>
    <string name="name">NAME</string>
    <string name="email" translatable="false">EMAIL</string>
    <string name="purchase_history">Purchase history</string>
    <string name="promotions">Promotions</string>
    <string name="there_is_no_product_on_sale_at_this_time">There is no product on sale at this time!</string>
    <string name="total_products">Total products:</string>
    <string name="discount">Discount:</string>
    <string name="total_price">Total price:</string>
    <string name="let_s_start_s">Let\'s Start</string>
    <string name="selected_shop">Selected shop:</string>
    <string name="gps_localization">GPS localization</string>
    <string name="scan_qr_code">Scan QR Code</string>
    <string name="you_can_scan_the_shop_qr">You can scan the shop QR code that is in the store entrance or use the location to determine the store automatically</string>
    <string name="to_start_click_button_in_">To start click button in right bottom corner and scan your product</string>
    <string name="scan_product">Scan product</string>
    <string name="scan_shop_qrcode">Scan shop QRcode</string>
    <string name="add_product">Add product</string>
    <string name="your_shopping_list_is_empty">Your shopping list is empty.</string>
    <string name="brochure">Brochure</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="pcs">pcs.</string>
    <string name="update_your_list">UPDATE YOUR LIST</string>
    <string name="mark_as_bought">MARK AS BOUGHT</string>
    <string name="delele_from_shopping_list">DELETE FROM SHOPPING LIST</string>
    <string name="close">CLOSE</string>
    <string name="checkout">Checkout</string>
    <string name="it_looks_like_one_or_more_products_have_not_been_added_to_your_shopping_cart_">It looks like one or more products have not been added to your shopping cart. Do you want to continue?</string>
    <string name="back_to_shopping">Back to shopping</string>
    <string name="add_to_shopping_list">ADD TO SHOPPING LIST</string>
    <string name="promotions_ends">Promotions Ends</string>
    <string name="product_is_already_on_shopping_list">Product is already on shopping list</string>
    <string name="unavailable">Unavailable</string>
    <string name="shops">Shops</string>
    <string name="Search_for_products">Search for products</string>
    <string name="Successful">Successful</string>
    <string name="show_all">Show all</string>
    <string name="This_category_is_already_selected">This category is already selected</string>
    <string name="all">all</string>
    <string name="transcation_in_progress"><![CDATA[Your Scan&Go transcation in progress...]]></string>
    <string name="EndItOrCancel">End it or Cancel to use \'Shop selection\'!</string>
    <string name="success_logout">You are successfully logout.</string>
    <string name="EndItLogout">End it or Cancel to use \'Logout\'!</string>
    <string name="AreYouSureLogout">Are you sure want to logout?</string>
    <string name="Mark_as_not_bought">Mark as not bought</string>
    <string name="LogoutConf">** Logout confirmation **</string>
    <string name="pleaseInsertProductAmount">Please insert product amount</string>
    <string name="This_product_is_already">This product is already on shopping list</string>
    <string name="This_product_is_not">This product is not on the shopping list</string>
    <string name="Product_added">Product added to list successfully</string>
    <string name="delete_conf">** Delete confirmation **</string>
    <string name="delete">Delete</string>
    <string name="AreYouDeleteProd">Are you sure to delete this product from your shopping list?</string>
    <string name="ProdDeleteList">Product deleted from list</string>
    <string name="ListUpdateSuccess">List updated successfully</string>
    <string name="TryAgain">Try Again…!</string>
    <string name="NoProductWithCode">No product with this code ( or the code was read incorrectly )!</string>
    <string name="SignInSucces">Signed In Successfully</string>
    <string name="SignInFail">Sign In Failed</string>
    <string name="failed">Failed</string>
    <string name="PromoEnds">Promotions Ends</string>
    <string name="AreYouSureClear">Are you sure want to clear your shopping list?</string>
    <string name="clear">Clear</string>
    <string name="Products_deleted">Products deleted from list</string>
    <string name="NoShopWithCode">No shop with this code ( or the code was read incorrectly )!</string>
    <string name="insert_barcode">Insert product barcode ( EAN-13 )</string>
    <string name="Add_to_shopping_small">Add to shopping list</string>
    <string name="AreYouSureWantToSelect">Are you sure want to select:</string>
    <string name="Shop_selection_">** Shop selection **</string>
    <string name="youarethere">You are there!</string>
    <string name="Your_list_has_been_cleared">Your list has been cleared.</string>
    <string name="wanttoclear">Do you want to clear your shopping list?</string>
    <string name="cartwasempty">It seems that your cart was empty!</string>
    <string name="productstocontinue">Add some products to continue!</string>
    <string name="CancelScanAndGo"><![CDATA[Are you sure want to cancel Scan&Go transaction?]]></string>
    <string name="yes">Yes</string>
    <string name="Transactioncanceled">Transaction canceled.</string>
    <string name="no">No</string>
    <string name="GpsStatus" translatable="false">GPS Status!!</string>
    <string name="YourGPSisOFF">Your GPS is: OFF</string>
    <string name="GPSisDisable">Your Device\'s GPS is Disable</string>
    <string name="Transactioncancelconfirmation">** Transaction cancel confirmation **</string>
    <string name="GPSs">** GPS Status **</string>
    <string name="EnableGPS">Enable GPS</string>
    <string name="January">January</string>
    <string name="February">February</string>
    <string name="March">March</string>
    <string name="April">April</string>
    <string name="May">May</string>
    <string name="June">June</string>
    <string name="July">July</string>
    <string name="August">August</string>
    <string name="September">September</string>
    <string name="October">October</string>
    <string name="November">November</string>
    <string name="December">December</string>
    <string name="Usetheappandknow">Use the app and know exactly how much you’re spending as you go.</string>
    <string name="Trackyourspending">Track your spending</string>
    <string name="Saygoodbye">Say goodbye to checkout lines!</string>
    <string name="Planyourshopping">Plan your shopping</string>
    <string name="Usetheshopping">Use the shopping list to plan your purchases.</string>
    <string name="DiscountL">Discount</string>
    <string name="Buydiscountedproducts">Buy discounted products and save money using the app.</string>
    <string name="Pleaseselectyourshop">Please select your shop.</string>

</resources>
