<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/common_google_signin_btn_text_dark"
    android:clickable="true"
    android:focusable="true"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/applyCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/barcode"
        app:layout_constraintStart_toEndOf="@+id/barcode"
        app:layout_constraintTop_toBottomOf="@+id/barcode">

        <Button
            android:id="@+id/btnApply"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@drawable/btnripple_effect"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAllCaps="false"
            android:text="@string/apply"
            android:textSize="12sp" />
    </androidx.cardview.widget.CardView>

    <EditText
        android:id="@+id/barcode"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/barcode_ean_13"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cancelCardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardCornerRadius="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/barcode"
        app:layout_constraintStart_toStartOf="@+id/barcode"
        app:layout_constraintTop_toBottomOf="@+id/barcode">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:background="@drawable/btnripple_effect"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textAllCaps="false"
            android:text="@string/cancel"
            android:textSize="12sp" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>